# wgram

./: .gitignore  ARCHITECTURE.md  Cargo.toml  index.html
backend/: Cargo.toml  README.md
backend/src/: main.rs  telegram.rs
src/: app.rs  auth.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/features/: messaging.rs  mod.rs  tasks.rs  websocket.rs
src/shared/: mod.rs  types.rs
src/shared/api/: mod.rs  websocket.rs
src/shared/utils/: mod.rs  time.rs
src/widgets/: chat_list.rs  chat_window.rs  mod.rs  sidebar.rs  task_list.rs
