[package]
name = "wgram-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "MouseEvent", "EventTarget", "WebSocket", "MessageEvent", "ErrorEvent", "CloseEvent", "HtmlAudioElement"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
console_error_panic_hook = "0.1.7"
reqwasm = "0.5"
gloo-timers = { version = "0.3", features = ["futures"] }

[workspace]
members = ["src-tauri"]
exclude = ["backend"]
